# bingo

./: .gitignore  .sesskey  Dockerfile  README.md  docker-compose.yml  hello.py  pyproject.toml
src/: .sesskey  main.py  test_tests.py
