[project]
name = "bingo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-fasthtml>=0.4.5",
    "redis>=5.0.8",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "pytest-watcher>=0.4.3",
    "pytest-asyncio>=0.24.0",
    "icecream>=2.1.3",
]
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
